#cargo-features = ["strip"]

[package]
name = "wrsr-mt"
version = "0.3.0"
authors = ["Kromgart <kromgart@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Modding tools for \"Workers & Resources: Soviet Republic\""
homepage = "https//github.com/Kromgart/wrsr-mt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
regex = "1.5"
md5 = "0.7"
lazy_static = "1.4"
const_format = "0.2"
path-slash = "0.1"
normpath = "0.3"
clap = { version = "2.33.3", default-features = false }

[profile.release]
lto = true
codegen-units = 1
#strip = "symbols"
